//! This code was AUTOGENERATED using the codama library.
//! Please DO NOT EDIT THIS FILE, instead use visitors
//! to add features, then rerun codama to update it.
//!
//! <https://github.com/codama-idl/codama>
//!
syntax = "proto3";

package vixen.parser.virtuals;

message BuyIx {
	BuyIxAccounts accounts = 1;
	BuyIxData data = 2;
}

message ClaimFeesIx {
	ClaimFeesIxAccounts accounts = 1;
}

message CreateMeteoraPoolIx {
	CreateMeteoraPoolIxAccounts accounts = 1;
}

message InitializeIx {
	InitializeIxAccounts accounts = 1;
}

message InitializeMeteoraAccountsIx {
	InitializeMeteoraAccountsIxAccounts accounts = 1;
}

message LaunchIx {
	LaunchIxAccounts accounts = 1;
	LaunchIxData data = 2;
}

message SellIx {
	SellIxAccounts accounts = 1;
	SellIxData data = 2;
}

message UpdatePoolCreatorIx {
	UpdatePoolCreatorIxAccounts accounts = 1;
}


message BuyEvent {
	uint64 buy_amount = 1;
	uint64 virtuals_amount = 2;
}

message GraduationEvent {
	string vpool = 1;
	string mint = 2;
	uint64 balance = 3;
}

message LaunchEvent {
	string vpool = 1;
	string mint = 2;
	string creator = 3;
}

enum PoolState {
	PoolStateInitialized = 0;
	PoolStateActive = 1;
	PoolStateGraduated = 2;
	PoolStateMigrated = 3;
}

message SellEvent {
	uint64 sell_amount = 1;
	uint64 virtuals_amount = 2;
}


message VirtualsPool {
	string creator = 1;
	string mint = 2;
	uint64 virtual_y = 3;
	uint64 graduation_x = 4;
	PoolState state = 5;
	uint32 bump = 6;
}


message BuyIxAccounts {
	string user = 1;
	string vpool = 2;
	string token_mint = 3;
	string user_virtuals_ata = 4;
	string user_token_ata = 5;
	string vpool_token_ata = 6;
	string platform_prototype = 7;
	string platform_prototype_virtuals_ata = 8;
	string vpool_virtuals_ata = 9;
	string token_program = 10;
}

message BuyIxData {
	uint64 amount = 1;
	uint64 max_amount_out = 2;
}

message ClaimFeesIxAccounts {
	string payer = 1;
	string vpool = 2;
	string virtuals_mint = 3;
	string token_mint = 4;
	string vpool_virtuals_ata = 5;
	string vpool_token_ata = 6;
	string platform = 7;
	string platform_virtuals_ata = 8;
	string platform_token_ata = 9;
	string creator_virtuals_ata = 10;
	string creator_token_ata = 11;
	string pool = 12;
	string lp_mint = 13;
	string lock_escrow = 14;
	string escrow_vault = 15;
	string token_program = 16;
	string virtuals_vault = 17;
	string token_vault = 18;
	string virtuals_token_vault = 19;
	string token_token_vault = 20;
	string virtuals_vault_lp_mint = 21;
	string token_vault_lp_mint = 22;
	string virtuals_vault_lp = 23;
	string token_vault_lp = 24;
	string vault_program = 25;
	string associated_token_program = 26;
	string system_program = 27;
	string dynamic_amm_program = 28;
}


message CreateMeteoraPoolIxAccounts {
	string vpool = 1;
	string meteora_deployer = 2;
	string meteora_deployer_virtuals_ata = 3;
	string meteora_deployer_token_ata = 4;
	string vpool_virtuals_ata = 5;
	string vpool_token_ata = 6;
	string lock_escrow = 7;
	string escrow_vault = 8;
	string pool = 9;
	string config = 10;
	string lp_mint = 11;
	string virtuals_mint = 12;
	string token_mint = 13;
	string virtuals_vault = 14;
	string token_vault = 15;
	string virtuals_token_vault = 16;
	string token_token_vault = 17;
	string virtuals_vault_lp_mint = 18;
	string token_vault_lp_mint = 19;
	string virtuals_vault_lp = 20;
	string token_vault_lp = 21;
	string pool_virtuals_ata = 22;
	string pool_token_ata = 23;
	string meteora_deployer_pool_lp = 24;
	string protocol_virtuals_fee = 25;
	string protocol_token_fee = 26;
	string payer = 27;
	string token_metadata = 28;
	string rent = 29;
	string mint_metadata = 30;
	string metadata_program = 31;
	string vault_program = 32;
	string token_program = 33;
	string associated_token_program = 34;
	string system_program = 35;
	string dynamic_amm_program = 36;
}


message InitializeIxAccounts {
	string payer = 1;
	string virtuals_mint = 2;
	string token_mint = 3;
	string vpool_virtuals_ata = 4;
	string vpool_token_ata = 5;
	string vpool = 6;
	string token_program = 7;
	string associated_token_program = 8;
	string system_program = 9;
}


message InitializeMeteoraAccountsIxAccounts {
	string vpool = 1;
	string meteora_deployer = 2;
	string meteora_deployer_virtuals_ata = 3;
	string meteora_deployer_token_ata = 4;
	string vpool_virtuals_ata = 5;
	string vpool_token_ata = 6;
	string lock_escrow = 7;
	string escrow_vault = 8;
	string pool = 9;
	string config = 10;
	string lp_mint = 11;
	string virtuals_mint = 12;
	string token_mint = 13;
	string virtuals_vault = 14;
	string token_vault = 15;
	string virtuals_token_vault = 16;
	string token_token_vault = 17;
	string virtuals_vault_lp_mint = 18;
	string token_vault_lp_mint = 19;
	string virtuals_vault_lp = 20;
	string token_vault_lp = 21;
	string pool_virtuals_ata = 22;
	string pool_token_ata = 23;
	string meteora_deployer_pool_lp = 24;
	string protocol_virtuals_fee = 25;
	string protocol_token_fee = 26;
	string payer = 27;
	string token_metadata = 28;
	string rent = 29;
	string mint_metadata = 30;
	string metadata_program = 31;
	string vault_program = 32;
	string token_program = 33;
	string associated_token_program = 34;
	string system_program = 35;
	string dynamic_amm_program = 36;
}


message LaunchIxAccounts {
	string creator = 1;
	string creator_virtuals_ata = 2;
	string token_mint = 3;
	string platform_prototype = 4;
	string platform_prototype_virtuals_ata = 5;
	string vpool = 6;
	string token_metadata = 7;
	string metadata_program = 8;
	string token_program = 9;
	string associated_token_program = 10;
	string system_program = 11;
	string rent = 12;
}

message LaunchIxData {
	string symbol = 1;
	string name = 2;
	string uri = 3;
}

message SellIxAccounts {
	string user = 1;
	string vpool = 2;
	string token_mint = 3;
	string user_virtuals_ata = 4;
	string user_token_ata = 5;
	string vpool_token_ata = 6;
	string platform_prototype = 7;
	string platform_prototype_virtuals_ata = 8;
	string vpool_virtuals_ata = 9;
	string token_program = 10;
}

message SellIxData {
	uint64 amount = 1;
	uint64 min_amount_out = 2;
}

message UpdatePoolCreatorIxAccounts {
	string creator = 1;
	string new_creator = 2;
	string virtuals_mint = 3;
	string token_mint = 4;
	string new_creator_virtuals_ata = 5;
	string new_creator_token_ata = 6;
	string vpool = 7;
	string token_program = 8;
	string associated_token_program = 9;
	string system_program = 10;
}



message ProgramState {
    oneof state_oneof {
        	VirtualsPool virtuals_pool = 1;
        }
}

message ProgramIxs {
    oneof ix_oneof {
        	BuyIx buy = 1;
        	ClaimFeesIx claim_fees = 2;
        	CreateMeteoraPoolIx create_meteora_pool = 3;
        	InitializeIx initialize = 4;
        	InitializeMeteoraAccountsIx initialize_meteora_accounts = 5;
        	LaunchIx launch = 6;
        	SellIx sell = 7;
        	UpdatePoolCreatorIx update_pool_creator = 8;
        }
}

